fcorrigindo referencial teorico e suporte tecnológico

--- a/template-tcc1/editaveis/informacoes.tex
+++ b/template-tcc1/editaveis/informacoes.tex
@@ -3,7 +3,7 @@
 \curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Aplicativo com sistema de recomendação de tarefas baseado em perfil e fase do ciclo menstrual feminino}
+\titulo{Aplicativo para Recomendações de Tarefas Baseadas em Perfil e Fase do Ciclo Menstrual}
 \data{2020}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
@@ -17,5 +17,5 @@
 
 % Dados da aprovação do trabalho
 \dataDaAprovacao{01 de junho de 2013 -- Data da aprovação do trabalho}
-\membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
+\membroConvidadoUm{Prof. Dr. Maurício Serrano}
 \membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
