--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -1,59 +1,174 @@
-\chapter*[Introdução]{Introdução}
-\addcontentsline{toc}{chapter}{Introdução}
+\chapter[Introdução]{Introdução}
+
+Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos capítulos do trabalho.ho.
 
 \section{Contextualização}
 
-O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muitos cientistas da medicina, psicologia e a sociedade em geral.
+O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931}.
+Desde essa iniciativa, com os avanços da ciência e da medicina, métodos cada vez mais sofisticados e 
+acessíveis para análise hormonal possibilitaram também vários estudos nessa área que ainda intriga 
+muitos cientistas da medicina, psicologia e a sociedade em geral.
 
-Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo\cite{becker2005}. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário. O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 e 35 dias \cite{lenton1984a} e começa a ser contabilizado a partir do primeiro dia da menstruação. O ciclo é dividido principalmente em 2 fases, a fase folicular e a fase lútea \cite{brondin2008}.
 
-A fase folicular é contabilizada a partir do promeiro dia da menstruação até o dia de pico do hormônio luteinizante(LH), é caracterizada pelo desenvolvimento folicular, em resposta ao aumento do hormônio folículo-estimulante(FSH) que começa a ser produzido no início da fase e normalmente tem o comprimento de 14 dias, podendo ter variações dependendo da idade \cite{lenton1984a}. Em mulheres jovens a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}.
+Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a 
+classificação correta das fases do ciclo\cite{becker2005}.
+Essas estratégias e métodos utilizam-se de medidas hormonais, temperatura corporal basal(TCB) e 
+avaliações baseadas em calendário. O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 
+e 35 dias \cite{lenton1984a}, começando a ser contabilizado a partir do primeiro dia da menstruação. 
+O ciclo é dividido, principalmente, em 2 fases, sendo: a fase folicular e a fase lútea 
+\cite{brondin2008}.
 
-Na fase folicular, um folículo é selecionado para ser tornar um óvulo e aumenta a produção do estradiol que faz surgir o LH e progesterona. O surgimento desses hormônios caracterizam clinicamente o ciclo ovulatório e o início da fase lútea \cite{fritz2010}. É nesse ciclo que ocorre o aumento da temperatura basal e o óvulo pode ser fecundado. 
 
-Na fase lútea, a progesterona prepara o endométrio para a chegada do óvulo no caso de concepção. Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, continuando assim o ciclo \cite{nikas2003}.
+A fase folicular é contabilizada a partir do primeiro dia da menstruação até o dia de pico do hormônio 
+luteinizante(LH). Essa fase é caracterizada pelo desenvolvimento folicular e, normalmente, tem o comprimento de 14 
+dias, podendo ter variações dependendo da idade \cite{lenton1984a}. Em mulheres jovens, a diferença no 
+tamanho do ciclo é, normalmente, provocada por ciclos mais curtos ou mais longos na fase folicular \cite{lenton1984a}.
 
-O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o sistema límbico \cite{gruber2002, brinton2008}.
 
-Tendo como teoria que os hormônios podem influênciar a vida das mulheres, muitos estudos têm sido realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas como, habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
+Na fase folicular, um folículo é selecionado para se tornar um óvulo, e aumenta a produção do estradiol
+que faz surgir o LH e a progesterona. O surgimento desses hormônios caracterizam clinicamente o ciclo 
+ovulatório e o início da fase lútea \cite{fritz2010}. É nesse ciclo que ocorre o aumento da temperatura
+basal e o óvulo pode ser fecundado. 
 
-No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, cinco atores \cite{hausmann2000, maki2002, courvoisier2013, becker1982, phillips1992} relataram uma melhora nas habilidades no início da fase folicular e um relatarou melhora nas habilidades quando o estradiol estava baixo \cite{hampson2014}. 
 
-Em tarefas verbais, um autor \cite{maki2002}, relatarou melhora no meio da fase lútea, um relatou melhora em mulheres que utilizam anticoncepcional(AC) \cite{mordecai2008} e dois relataram melhora no final da fase folicular e no final da fase lútea\cite{Rosenberg2002, solis2004}.
+Na fase lútea, a progesterona prepara o endométrio para a chegada do óvulo no caso de concepção. 
+Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, 
+continuando assim o ciclo \cite{nikas2003}.
 
-No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão quando a progesterona estava alta, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
 
-Já nos aspectos emocionais e comportamental, no estudo de \citeonline{rosa2016} levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros. Essas alterações podem ser classificadas como transtorno disfórico pré-menstrual(TPM) \cite{ACOG2000}.
+O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e 
+lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos 
+post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam 
+acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas 
+cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o 
+sistema límbico \cite{gruber2002, brinton2008}.
 
-Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como então adiquirir o conhecimento do que é influênciado? porque adiquirir esse conhecimento seria importante? e como utilizar essa influência para benefício próprio?
 
-Para a mulher, adiquirir o conhecimento de que fase se está, como, em que e porque seu ciclo influência sua vida, aumentaria significativamente a sua inteligência emocional, já que ela é medida utilizando a \textit{Multifactor Emotional Intelligence Scale} (MEIS) que é composta por 3 habilidades emocionais distintas: perceber, entender e regular emoções. Em palavras gerais a inteligência emocional é \lq \lq A habilidade de monitorar os próprios sentimentos e emoçoes e de outros indivíduos, discriminar entre eles e usar essas informações para guiar o pensamento e ações \rq \rq \cite{salovey1990} e no estudo realizado por \citeonline{lam2002} ele relaciona o impacto da inteligência emocional com a performance individual e neste estudo o autor confirma a hipotese de que a inteligência emocional influencia no desempenho cognitivo individual, e que das três medidas, a percepção e regulação são as que mais influênciam para o aumento da inteligência emocional.
+Tendo como teoria que os hormônios podem influenciar a vida das mulheres, muitos estudos têm sido 
+realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, 
+motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da 
+literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas, 
+tais como: habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
 
-Esse estudo tem como teoria que o ciclo menstrual influência nas emoções e comportamentos das mulheres, portanto, em suas vidas e na realização de tarefas cotidianas. Utilizando pesquisas e a literatura existente que embase essa teoria o estudo propõe a realização de um aplicativo com um sistema de recomendação que dará indicações de tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do perfil e da fase do ciclo menstrual que a mulher se encontra, além de levar informações sobre como a fase influencia. Esse conhecimento irá beneficiar a inteligencia emocional e consequentemente o desempenho cognitivo individual das mulheres.
 
-O sistema de recomendação foi escolhido por causa da habilidade em lidar com execesso de informação, fornecendo recomendações personalisadas baseadas nas informações coletadas, equilibando fatores como precisão, novidade, disperção e estabilidade \cite{bobadilla2013}.
+No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, 
+\citeonline{hausmann2000}, \citeonline{maki2002}, \citeonline{courvoisier2013}, \citeonline{becker1982} e \citeonline{phillips1992} relataram uma melhora 
+nas habilidades no início da fase folicular, e um relatou melhora nas habilidades quando o 
+estradiol estava baixo \cite{hampson2014}. 
 
-A problemática será levantar os divesos tipos de perfis das mulheres de acordo com a fase do ciclo menstrual delas, descobrir se existe diferença entre mulheres que utilizam ou não métodos hormonais ou tem algum disturbio hormonal e como essas nuances influenciam as tarefas cotidianas delas. Além de conseguir determinar corretamente em qual fase do ciclo a mulher está apenas com o uso do método do calendário. Para isso, será utilizada a literatura existente sobre o assunto, pesquisas préviamente públicadas e pesquisas próprias, em formato de questionário, aplicadas a mulheres em idade reprodutiva.
 
-Tendo a consciência da delicadesa do assunto estudado, vale ressaltar que este estudo não tem como objetivo entrar na discução de diferença entre sexo, não conta com o acompanhamento de um profissional da saúde e é um estudo de caso, tendo como objetivo desenvolver um sistema que seja apenas um guia que facilite a vida das mulheres. 
+Em tarefas verbais, o trabalho \cite{maki2002} relatou melhoras no meio da fase lútea. Outro 
+reportou que há melhor realização de tarefas verbais em mulheres que utilizam anticoncepcional(AC) 
+\cite{mordecai2008}. Por fim, dois trabalhos concluem que a realização das tarefas verbais é melhor 
+ao final das fases folicular e lútea \cite{Rosenberg2002, solis2004}.
+
+
+No aspecto emocional, vários estudos relacionaram as fases com a habilidade de reconhecer emoções 
+faciais. Em \citeonline{gasbarri2008}, os resultados indicaram que esse reconhecimento foi mais 
+preciso quando a progesterona estava alta. Entretanto, vários outros autores indicaram que o 
+reconhecimento piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}.
+ Há ainda mais um estudo que correlacionou o aumento de hormônios do estresse com a fase lútea \cite{kirschbaum1999}.
+
+
+
+Já nos aspectos emocionais e comportamentais, no estudo de \citeonline{rosa2016}, levantou-se que, 
+durante o período da semana que antecede a menstruação e no período da menstruação, as mulheres 
+entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações 
+compreendem variações de humor, irritabilidade, ansiedade, entre outros. Essas alterações podem ser 
+classificadas como transtorno disfórico pré-menstrual (TPM) \cite{ACOG2000}.
+
+
+
+Aprofundando um pouco mais no tema, e conferindo maior detalhamento ao leitor, a inteligência emocional 
+é medida utilizando \textit{Multifactor Emotional Intelligence Scale} (MEIS), compreendendo três 
+habilidades emocionais distintas: perceber, entender e regular emoções. Em linhas gerais, a inteligência 
+emocional é \lq \lq A habilidade de monitorar os próprios sentimentos e emoções e de outros indivíduos, 
+discriminar entre eles e usar essas informações para guiar o pensamento e ações \rq \rq \cite{salovey1990}. 
+No estudo realizado por \citeonline{lam2002}, os autores relacionam o impacto da inteligência emocional 
+com o desempenho individual. Complementarmente, neste mesmo estudo, os autores confirmam a hipótese de 
+que a inteligência emocional influência no desempenho cognitivo individual. Por fim, os autores concluem 
+que, das três medidas, a percepção e a regulação são as que mais influenciam para o aumento da inteligência 
+emocional. Diante dos exposto, para as mulheres, a possibilidade de adquirirem conhecimentos de que 
+fase estão em um dado momento, como e porquê seus ciclos influenciam suas vidas, poderia aumentar 
+significativamente a inteligência emocional dessas mulheres e também seus desempenhos cognitivos. 
+
+
+
+Esse estudo fundamenta-se no fato de que o ciclo menstrual influência as emoções e os comportamentos 
+das mulheres. Como contribuição principal, propõe-se um aplicativo de recomendação, o qual procurará 
+indicar tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do 
+perfil e da fase do ciclo menstrual que a mulher se encontra, além de conferir informações sobre como 
+a fase possivelmente influencia em suas habilidades. Espera-se que esse conhecimento beneficie, 
+adicionalmente, a inteligencia emocional e, consequentemente, o desempenho cognitivo individual das 
+mulheres.
+
+O uso de recomendação, mais precisamente o uso dos conceitos associados aos sistemas de recomendação, 
+foi escolhido, pois esses sistemas tratam muitas informações, fornecendo recomendações personalizadas, 
+e procurando equacionar fatores como: precisão, novidade, dispersão e estabilidade \cite{bobadilla2013}.
+
+
+A problemática, portanto, compreende levantar os diversos tipos de perfis das mulheres de acordo com a 
+fase do ciclo menstrual delas, descobrir se existe diferença entre mulheres que utilizam ou não métodos 
+hormonais ou tem algum distúrbio hormonal, e como essas nuances influenciam as tarefas cotidianas delas. 
+Além de conseguir inferir em qual fase do ciclo a mulher está apenas com o uso do método do calendário. 
+Para isso, será utilizada a literatura existente sobre o assunto, pesquisas previamente publicadas e 
+pesquisas da própria autora, em formato de questionários, sendo esses aplicados a mulheres em idade 
+reprodutiva.
+
+
+Dado a particularidades do assunto, bem como por lidar com aspectos pessoais, vale ressaltar que este 
+estudo não tem como objetivo entrar na discussão de diferença entre sexo. Além disso, o estudo não 
+conta com o acompanhamento dedicado de um profissional da saúde, uma vez que a ideia não é representar 
+um tratamento médico ou algo nesse sentido. Trata-se apenas de um estudo, tendo como objetivo desenvolver 
+um aplicativo informativo, totalmente baseado na literatura especializada, e que estimula as mulheres a 
+se conhecerem melhor. 
+
+
+\section{Questões de Pesquisa}
+
+Com base no exposto na contextualização, o presente trabalho pretende colaborar com esses estudos, 
+os quais relacionam as fases do ciclo menstrual com as diferentes habilidades inerentes nas tarefas 
+cotidianas e profissionais das mulheres.
+
+Nesse sentido, as seguintes questões de pesquisa nortearão o trabalho, sendo:
+
+\begin{itemize}
+
+        \item Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como adquirir esse conhecimento?
+
+        \item Por que seria importante adquirir esse conhecimento? 
+
+        \item Como utilizar esse conhecimento de forma a auxiliar as mulheres nas suas tarefas cotidianas e profissionais?
+
+\end{itemize}
 
 \section{Justificativa}
 
-Para uma mulher pode ser difícil monitorar, identificar padrões e antecipar mudanças físicas, emocionais e comportamentais que existem no decorrer do ciclo e como isso influencia a vida delas. Os aplicativos vieram ajudá-las nessas questões.
+Para uma mulher pode ser difícil monitorar, identificar padrões e antecipar mudanças físicas, 
+emocionais e comportamentais que existem no decorrer do ciclo, e como isso influencia a vida delas.
 
-Atualmente, existem muitos aplicativos no mercado que estão voltados para a questão reprodutiva e alguns até possuem \textit{features} para adicionar cotidianamente os sintomas sentidos, humor, temperatura corporal, intensidade do fluxo, tipo de muco, se toma medicamento, quando há relações sexuais, entre outras notas. Entretanto,existe uma carência de um sistema que auxilie com informações e recomendações de tarefas baseadas no perfil e fase do ciclo da mulher.
+Atualmente, existem muitos aplicativos no mercado que estão voltados para a questão reprodutiva, 
+e alguns até possuem \textit{features} para adicionar cotidianamente os sintomas sentidos, humor, 
+temperatura corporal, intensidade do fluxo, tipo de muco, medicamentos tomados, relações sexuais, 
+entre outras notas. Entretanto, existe uma carência de recursos que auxiliem de forma informativa bem 
+como com recomendações de tarefas baseadas no perfil e na fase do ciclo menstrual.
 
-Outra problemática é que apesar do avanço, relativamente poucas descobertas que relacionam a influência hormonal, do ciclo menstrual, na emoção, comportamento e cognição, surgiram como conclusivas \cite{poroma2014}, e que relatam o impacto dessa influência na vida pessoal das mulheres. Portanto esse estudo também trará um levantamento e pesquisa própria sobre as influências do ciclo menstrual relatadas por um grupo de mulheres em idade reprodutiva.
-
-Para ajudar as mulheres a notar padrões, atencipar mudanças, maximixar o auto-conhecimento, a inteligência emocional e a produtividade pesssoal, esse estudo propõe a realização de um aplicativo com um sistema de recomendação com caráter informativo, que dará, de acordo com o perfil e o ciclo menstrual individual de cada mulher, indicações de tarefas que seriam mais difíceis ou mais fáceis de serem realizadas no período do ciclo que a mulher se encontra e o porque disto.
-
+Apesar dos avanços, relativamente poucas descobertas que correlacionam a influência hormonal com a 
+emoção, o comportamento e a cognição são de fato conclusivas \cite{poroma2014}. Portanto, esse estudo 
+também trará um levantamento sobre as influências do ciclo menstrual relatadas por um grupo de mulheres 
+em idade reprodutiva.
 
 
 \section{Objetivos}
 
-\subsection{Objetivos Gerais}
+Seguem os objetivos Geral e Específicos atrelados a esse trabalho.
 
-O objetivo geral desse trabalho é desenvolver um aplicativo com um sistema de recomendação de tarefas cotidianas baseado no perfil e ciclo menstrual individual de cada mulher, para auxiliar no auto conhecimento e no aumento da inteligência emocional individual.
+\subsection{Objetivo Geral}
+
+
+Esse estudo propõe um aplicativo informativo e de recomendações de tarefas com base no perfil e no ciclo 
+menstrual, no intuito de apoiar as mulheres na identificação de mudanças; no autoconhecimeno; na inteligencia emocional, e na produtividade pessoal.
+
 
 \subsection{Objetivos Específicos}
 
@@ -61,34 +176,36 @@ Para atingir o objetivo geral, alguns objetivos específicos foram estabelecidos
 
 \begin{itemize}
 
-        \item Definir um processo de coleta de perfil das mulheres de acordo com seus ciclos menstruais.
+        \item Definir um processo de coleta de dados sobre o perfil das mulheres de acordo com seus ciclos menstruais;
+        
+        \item Difinir um processo de análise de resultados obtidos a partir dos dados coletados;
 
-        \item Definir um processo de contagem de ciclo para determinar em que fase do ciclo a mulher se encontra. 
+        \item Definir um processo de contagem de ciclo para determinar em que fase do ciclo menstrual a mulher se encontra;
 
-        \item Definir um processo de recomendação de tarefas que podem ser  mais facilmente realizadas baseado na fase do ciclo. 
+        \item Definir um processo de recomendação de tarefas que podem ser  mais facilmente realizadas baseado na fase do ciclo;
 
-        \item Definir um processo de recomendação de tarefas que podem ser mais dificilmente realizadas baseado na fase do ciclo.
+        \item Definir um processo de recomendação de tarefas que podem ser mais dificilmente realizadas baseado na fase do ciclo, e
 
-        \item Especificar um sistema de recomendação de atividades baseado no ciclo menstrual individual dos perfis. 
+        \item Desenvolver um aplicativo de recomendação de tarefas baseado nos processos definidos anteriormente.
 
 \end{itemize}
 
-\section{Organização dos capítulos}
+\section{Organização dos Capítulos}
 
-Este trabalho de conclusão de curso está organizado nos seguintes capítulos:
+A monografia está organizada nos seguintes capítulos:
 
 \begin{itemize}
 
-        \item  Capítulo 1 - Introdução: apresentou Contextualização, justificativa, problema de pesquisa e objetivos;
 
-        \item Capítulo 2 - Referencial teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada.
-        \item Capítulo 3 - Materiais e Métodos: apresenta o plano metodológico adotado e caracteriza o objeto de estudo;
+        \item Capítulo 2 - Referencial Teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada;
+        
+        \item Capítulo 3 - Referencial Tecnológico: aborda os principais suportes tecnológicos que viabilizarão o desenvolvimento da proposta;
+        
+        \item Capítulo 4 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
 
-        \item Capítulo 4 - Proposta: Apresenta a proposta deste trabalho.
+        \item Capítulo 5 - Proposta: apresenta a proposta deste trabalho em si, e
 
-        \item Capítulo 5 - Resultados finais: apresenta os resultados alcançados.
-
-        \item Capítulo 6 - Conclusão: apresenta a conclusão a cerca dos resultados alcançados, bem como os possíveis trabalhos futuros.
+        \item Capítulo 6 - Resultados Obtidos: expões os resultados alcançados até o momento, no escopo do TCC-01.
           
 \end{itemize}
 % Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
