--- a/template-tcc1/editaveis/suporteTecnologico.tex
+++ b/template-tcc1/editaveis/suporteTecnologico.tex
@@ -1,81 +1,183 @@
 \chapter[Suporte Tecnológico]{Suporte Tecnológico}
 
+Neste capítulo, serão aprensentadas brevemente as ferramentas e tecnologias 
+utilizadas no desenvolvimento do aplicativo, no gerenciamento 
+do projeto, no gerenciamento de configuração, no gerenciamento da 
+escrita e na condução da pesquisa.
+
 \section{Desenvolvimento da Aplicação}
 
-\subsection{Flutter}
+Esta seção contemplará as tecnologias que foram utilizadas na construção do 
+código da aplicação.
 
-O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código. Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código \cite{flutter2017}.
+\subsection{Flutter 1.22.2}
 
-Ele é composto por um SDK(Software Development Kit) e um framework. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor a desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação\cite{flutter2017}.
+O Flutter é um kit de ferramentas de interface de usuário(UI) 
+grátis e \emph{open-souce} criado pelo Google e lançado em 2017. 
+Ele auxilia na criação de aplicativos nativos para dispositivos 
+\emph{mobile}, \emph{web} e \emph{desktop} a partir de uma 
+única base de código. Isso significa que é possível criar uma 
+aplicação para diferentes sistemas operacionais(IOS e Android) 
+utilizando um único código \cite{flutter2017}.
 
-\subsubsection{Dart}
+Ele é composto por um SDK(\emph{Software Development Kit}) e um
+\emph{framework}. O SDK é uma coleção de ferramentas que ajudam
+o desenvolvedor a desenvolver a aplicação e executá-la em
+plataformas específicas. Essas ferramentas incluem bibliotecas,
+documentação, exemplos de códigos, processos, guias,
+compiladores, entre outras coisas. Já o \emph{framework} é
+uma coleção de elementos da UI que são reutilizáveis e podem
+ser personalizados para as necessidades específicas da
+aplicação \cite{flutter2017}.
 
-Dart é a linguagem de programação utilizada no flutter e também foi criada pela Google em 2011. É uma linguagem focada para desenvolvimento front-end e do tipo orientada a objeto\cite{flutter2017}.
+\subsubsection{Dart 2.10.2}
+
+Dart é a linguagem de programação utilizada no flutter, sendo também 
+criada pelo Google em 2011. É uma linguagem focada para 
+desenvolvimento \emph{front-end} e do tipo orientada a objetos\cite{flutter2017}.
 
 \subsubsection{Firebase}
 
-Firebase é uma plataforma desenvolvida pelo Google para a criação de aplicativos web e móveis. Era originalmente uma empresa independente fundada em 2011. Em 2014, o Google adquiriu a plataforma e agora é sua ferramenta principal para o desenvolvimento de aplicativos. O Firebase contêm funcionalidade como, análises, bancos de dados, mensagens e relatórios de erros, garantindo mais agilidade no desenvolvimento de aplicativos\cite{firebase2011}.
+Firebase é uma plataforma desenvolvida pelo Google para a criação de aplicativos 
+\emph{web} e móveis. Era originalmente uma empresa independente, fundada em 2011. 
+Em 2014, o Google adquiriu a plataforma e, agora, é sua ferramenta principal 
+para o desenvolvimento de aplicativos. O Firebase contêm funcionalidades como: 
+análises; bancos de dados; mensagens e relatórios de erros, garantindo mais agilidade no desenvolvimento de aplicativos\cite{firebase2011}.
 
 \section{Engenharia de Software}
 
+Esta seção apresentará os suportes tecnológicos associados mais especificamente 
+à Engenharia de Software. A mesma foi dividida em três sub seções, sendo elas: 
+Gerenciamento de Projetos, Gerenciamento de Desenvolvimento e Gerenciamento de 
+Configuração.
+
 \subsection{Gerenciamento do Projeto}
+
+Esta subseção descreve as metodologias e ferramentas adotadas para o gerenciamento 
+do projeto, tanto na escrita quanto no desenvolvimento da aplicação.
 
 \subsubsection{Trello}
 
-O Trello é uma aplicação web baseado no sistema Kanbam que auxilia no gerenciamento de tarefas para times grandes ou pessoas individuais. Originalmente criado pela Fog Creek Software em 2011 e vendida a Atlassian em 2017 \cite{trello2011}. O Trello foi utilizado para organizar as tarefas relacionadas a escrita do TCC e também para manter o registro dos artigos aqui utilizados.
+O Trello é uma aplicação \emph{web} baseada no sistema Kanbam, que auxilia no 
+gerenciamento de tarefas para times grandes ou pessoas individuais. 
+Originalmente criado pela Fog Creek Software, em 2011, e vendida à Atlassian, em 
+2017 \cite{trello2011}. O Trello foi utilizado para organizar as tarefas 
+relacionadas à escrita do TCC, e também para manter o registro dos artigos utilizados.
 
 \subsubsection{ZenHub}
 
-O Zenhub é uma ferramenta semelhante ao Trello. É exclusiva para uso junto ao Github e é um poderosa ferramenta para rastreamento, planejamento e relatórios das features de projetos no GitHub. Ele é baseado nas metodologias ageis, como scrum, e é utilizado em projetos ágeis. Com ele é possível planejar roteiros, usar quadros de tarefas e gerar relatórios automatizados diretamente do repositório do GitHub \cite{zenhub2020}. Nesse projeto será utilizado para organizar as tarefas relacionadas ao desenvolvimento do aplicativo Mina.
+O Zenhub é uma ferramenta semelhante ao Trello. É exclusiva para uso junto ao 
+Github, sendo uma poderosa ferramenta focada em: rastreamento; planejamento e 
+relatórios das \emph{features} de projetos no GitHub. Ele é baseado nas 
+metodologias ágeis, como Scrum, e é utilizado em projetos ágeis. Com ele, 
+é possível planejar roteiros; usar quadros de tarefas e gerar relatórios 
+automatizados diretamente do repositório do GitHub \cite{zenhub2020}. 
+Nesse projeto, será utilizado para organizar as tarefas relacionadas ao 
+desenvolvimento do aplicativo proposto.
 
 
 \subsubsection{Slack}
 
-O Slack é uma plataforma de comunicação que permite a criação de times e a organização de canais de conversas por tópicos, grupos privados ou mensagens diretas. Ele também possui integração com  Google Drive, Trello, Dropbox, Box, Heroku, IBM Bluemix, Crashlytics, GitHub, entre outros \cite{slack2013}. Nesse projeto será utilizado para comunicação entre aluno e orientador.
+O Slack é uma plataforma de comunicação que permite a criação de times e a 
+organização de canais de conversas por tópicos, grupos privados ou mensagens 
+diretas. Ele também possui integração com  Google Drive, Trello, Dropbox, Box, 
+Heroku, IBM Bluemix, Crashlytics, GitHub, entre outros \cite{slack2013}. Nesse 
+projeto, será utilizado para comunicação entre aluno e orientador.
 
 \subsection{Gerenciamento de Desenvolvimento}
 
-\subsubsection{Visual Studio Code}
+Esta subseção descreve as ferramentas adotadas para a construção do código da aplicação.
 
-Visual Studio Code é um editor de texto ou código fonte feito pela Microsoft bastante utilizado no desevolvimento de software \cite{vscode2015}. Tem suporte para várias linguagens e possui ferramentas importantes que auxiliam no desenvolvimento de software, como por exemplo debugger, auto complete em códigos com sugestões inteligentes e uma infinidade de extensões que podem ser instaladas para auxiliar ainda mais no desenvolvimento. Será usado como editor de código fonte principal no trabalho. 
+\subsubsection{Visual Studio Code 1.50.1}
 
-\subsubsection{Android Studio}
+Visual Studio Code é um editor de texto ou código fonte feito pela Microsoft, 
+bastante utilizado no desevolvimento de software \cite{vscode2015}. Tem suporte 
+para várias linguagens, e possui ferramentas importantes que auxiliam no 
+desenvolvimento de software, como por exemplo: \emph{debugger}, auto completar em 
+códigos, com sugestões inteligentes, e uma infinidade de extensões que podem ser instaladas para auxiliar ainda mais no desenvolvimento. Será usado como editor de código fonte principal no trabalho. 
 
-O Android Studio \cite{android2020} é o ambiente de desenvolvimento para aplicativos androids oficial da Google. Desenvolvido pela Google e pela JetBrains, o ambiente possui ferramentas como editor de texto, editor de layout, analizador apk, rápidos emuladores, debugger, entre outras ferramentas que auxiliam no desenolvimento de aplicativos. Apenas o emulador de dispositivo desse software será utilizado no trabalho por conter tanto dispositivos Android quanto IOS.
+\subsubsection{Android Studio 3.6.3}
+
+O Android Studio \cite{android2020} é o ambiente de desenvolvimento para 
+aplicativos androids oficial da Google. Desenvolvido pelo Google e pela 
+JetBrains, o ambiente possui ferramentas como editor de texto, editor de \emph{layout}, 
+analizador apk, rápidos emuladores, \emph{debugger}, entre outras ferramentas 
+que auxiliam no desenolvimento de aplicativos. Apenas o emulador de dispositivo 
+desse software será utilizado no trabalho por conter tanto dispositivos Android 
+quanto IOS.
 
 \subsubsection{Linux Mint}
-O Linux Mint \cite{lm2020} é uma distribuição linux gratuita e baseada no ubuntu. O sistema operacional possui aplicações de código aberto ou código livre e é mantido pelo Linux Mint Team e a comunidade. Será usado como principal sistema operacional nesse trabalho.
+
+O Linux Mint \cite{lm2020} é uma distribuição Linux gratuita e baseada no Ubuntu. O sistema operacional possui aplicações de código aberto ou código livre e é mantido pelo Linux Mint Team e a comunidade. Será usado como principal sistema operacional nesse trabalho.
 
 \subsubsection{Figma}
 
-O Figma \cite{figma2020} é um software para desenvolvimento de protótipos e criação de designes que não precisa de instalação porque está disponível nas nuvens através de uma página web. Possui features para design, prototipação, design de sistemas, colaboração e dowload. Os protótipos contam com interações, transições avançadas com animações inteligentes, GIFs animados, entre outros, que possibilitam uma experiência muito próxima ao mundo real. Ele permite o compartilhamento rápido do protótipo a outras pessoas e facilita a contribuição. Nesse trabalho será utilizado como ferramenta para a prototipação do aplicativo Mina. 
+O Figma \cite{figma2020} é um software para desenvolvimento de protótipos e 
+criação de projetos que não precisa de instalação, uma vez que está disponível 
+em nuvem, através de uma página web. Possui \emph{features} para projetos, prototipação, 
+projetos de sistemas, colaboração e \emph{download}. Os protótipos contam com 
+interações, transições avançadas com animações inteligentes, GIFs animados, 
+entre outros. Tais recursos possibilitam uma experiência muito próxima ao mundo 
+real. Ele permite o compartilhamento rápido do protótipo a outras pessoas e 
+facilita a contribuição. Nesse trabalho, será utilizado como ferramenta para a 
+prototipação do aplicativo proposto. 
 
 \subsection{Gerenciamento de Configuração}
 
-\subsubsection{Git}
+Esta subseção descreve as ferramentas adotadas para o versionamento do código da aplicação e da monografia.
 
-O Git \cite{git2020} é uma ferramente gratuita e de código livre para controle de versão utilizada para lidar desde pequenos a grandes projetos com rapidez e eficiência. Ele possibilita a criação de diversas branchs que se ramificam e podem ser editadas, combinadas e deletadas sem sofrer perdas de dados. O controle de versão também possibilita retornar a um momento específico do projeto e observar as mudanças entre as versões. O Git 2.17.1 é utilizado para versionamento de código fonte do aplicativo Mina e para a parte escrita do TCC.
+
+\subsubsection{Git 2.17.1}
+
+O Git \cite{git2020} é uma ferramenta gratuita e de código livre para controle 
+de versão, utilizada para lidar desde pequenos a grandes projetos com rapidez e 
+eficiência. Ele possibilita a criação de diversas branches que se ramificam e 
+podem ser editadas, combinadas e removidas sem sofrer perdas de dados. O controle de versão também possibilita retornar a um momento específico do projeto e observar as mudanças entre as versões. O Git 2.17.1 é utilizado para versionamento de código fonte do aplicativo Mina e para a parte escrita do TCC.
 
 
 \subsubsection{GitHub}
 
-O GitHub \cite{github2020} é uma plataforma online de desenvolvimento de software que permite hospedar códigos e utilizar o controle de versão do Git. Possibilita a revisão de códigos, gerenciamento de projetos, integração continua, hospedagem, integrações de ferramentas, gerenciamento de equipe, documentação, hospedagem de código, entre outras funcionalidades. Os repositórios, locais aonde os projetos são guardados, podem ser fechados ou abertos e possibilitam o trabalho em equipe. Será utilizado como plataforma que hospedara o código, documentação e TCC do projeto
+O GitHub \cite{github2020} é uma plataforma \emph{online} de desenvolvimento de 
+software que permite hospedar códigos e utilizar o controle de versão do Git. 
+Possibilita a revisão de códigos, gerenciamento de projetos, integração continua, 
+hospedagem, integrações de ferramentas, gerenciamento de equipe, documentação, 
+hospedagem de código, entre outras funcionalidades. Os repositórios, locais 
+aonde os projetos são guardados, podem ser fechados ou abertos e possibilitam o 
+trabalho em equipe. Será utilizado como plataforma que hospedará o código, 
+documentação e monografia do projeto
 
 \section{Escrita e Condução da Pesquisa}
 
 \subsection{LaTex}
 
-LaTex \cite{latex2020} é um sistema para preparação de documento que inclui recursos destinados à produção de documentação técnica e científica. O LaTex é utilizado como padão para comunicação e publicação de documentos científicos e está disponível como software livre. O LaTex possibilita a composição de artigos de periódicos, relatórios técnicos, livros e apresentações de slides, faz o controle automático de seções, referências, tabelas, figuras, notas de rodapé, índices, entre outros e possíbilita a tipografia de fórmulas matemáticas complexas. Neste trabalho é utilizado localmente junto ao editor de texto padrão do sistema operacional. O template utilizado é o disponibilizado pela faculdade do gama no repositório do GitHub \footnote{Repositório do Github com o Template: https://github.com/fga-unb/template-latex-tcc}.
+LaTex \cite{latex2020} é um sistema para preparação de documento. Inclui 
+recursos destinados à produção de documentação técnica e científica. O LaTex é 
+utilizado como padão para comunicação e publicação de documentos científicos, estando 
+disponível como software livre. O LaTex possibilita a composição de artigos de 
+periódicos, relatórios técnicos, livros e apresentações de \emph{slides}, faz 
+o controle automático de seções, referências, tabelas, figuras, notas de rodapé, 
+índices, entre outros e possíbilita a tipografia de fórmulas matemáticas 
+complexas. Neste trabalho, é utilizado localmente, junto ao editor de texto 
+padrão do sistema operacional. O \emph{template} utilizado é o disponibilizado pela 
+Faculdade do Gama no repositório do GitHub \footnote{Repositório do Github com o Template: https://github.com/fga-unb/template-latex-tcc}.
+A versão utilizada foi a TeX Live 2017/Debian.
 
-\section{Resumo do Capítulo}
+\section{Considerações Finais do Capítulo}
 
-Neste capítulo há uma breve descrição de todas as ferramentas que serão utilizadas no desenvolvimento do projeto. 
+Neste capítulo, há uma breve descrição de todas as ferramentas que serão 
+utilizadas no desenvolvimento do projeto. 
 
-No desenvolvimento do aplicativo, será utilizado o Linux Mint como sistema operacional, o Visual Studio Code como editor de texto, e o Android Studio como o emulador de dispositivos IOS e Android e na aplicação será utilizado o Flutter como framework para criação de aplicativos nativos, o dart como linguagem de programação do Flutter e o Firebase como banco de dados e controle de acesso. 
+No desenvolvimento do aplicativo, será utilizado o Linux Mint como sistema 
+operacional; o Visual Studio Code como editor de texto, e o Android Studio como 
+o emulador de dispositivos IOS e Android. Na aplicação, será utilizado o Flutter 
+como \emph{framework} para criação de aplicativos nativos; o dart como linguagem 
+de programação do Flutter, e o Firebase como banco de dados e controle de acesso. 
 
-Toda a parte de código, documentação e escrita do trabalho será disponibilizada no Github que utiliza o Git para controle de versão.
+As partes envolvendo o código, documentação e escrita do trabalho serão disponibilizadas 
+no Github que utiliza o Git para controle de versão.
 
 O gerenciamento do projeto do aplicativo será feito através do Zenhub, aplicativo disponível no Github, e o Trello será utilizado para o gerenciamento das tarefas do TCC. 
 
-A escrita do TCC será frealizada utilizando o LaTex em cima de um template disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
+A escrita do TCC será realizada utilizando o LaTex com base em um template 
+disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
 
